# ironworker

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  rust-toolchain  tmp.drawio
.github/workflows/: build.yml
examples/actix/: Cargo.toml
examples/actix/src/: main.rs
examples/axum/: Cargo.toml  Ironworker.yml
examples/axum/src/: main.rs
examples/postgres/: Cargo.toml  Ironworker.yml
examples/postgres/src/: main.rs
examples/redis/: Cargo.toml  Ironworker.yml
examples/redis/src/: main.rs
examples/rocket/: Cargo.toml  Rocket.toml  docker-compose.yml
examples/rocket/migrations/2021-12-29-024537_create_posts_table/: up.sql
examples/rocket/src/: main.rs
examples/sqs/: Cargo.toml  docker-compose.yml
examples/sqs/src/: main.rs
ironworker/: Cargo.toml
ironworker-actix/: Cargo.toml
ironworker-axum/: Cargo.toml
ironworker-axum/src/: lib.rs
ironworker-axum/templates/: base.html  failed.html  stats.html
ironworker-bench/: Cargo.toml
ironworker-bench/benches/: process_redis.rs
ironworker-core/: Cargo.toml
ironworker-core/src/: application.rs  broker.rs  config.rs  enqueuer.rs  error.rs  from_payload.rs  info.rs  lib.rs  message.rs  middleware.rs  task.rs  worker.rs  worker_state.rs
ironworker-core/src/application/: builder.rs  mod.rs  shared.rs  worker.rs
ironworker-core/src/application/worker/: machine.rs  mod.rs  pool.rs
ironworker-core/src/broker/: broker.rs  config.rs  mod.rs  process.rs
ironworker-core/src/meta/: mod.rs  queue_state.rs  worker_state.rs
ironworker-core/src/middleware/: enqueue.rs  extract.rs  mod.rs
ironworker-core/src/state/: mod.rs  queue.rs
ironworker-core/src/task/: async.rs  base.rs  config.rs  mod.rs  performable.rs  sync.rs
ironworker-core/src/task/error/: config.rs  mod.rs  tagged.rs
ironworker-httppoller/: Cargo.toml
ironworker-kafka/: Cargo.toml
ironworker-postgres/: Cargo.toml  docker-compose.yml  sqlx-data.json
ironworker-postgres/queries/: migrate.sql
ironworker-postgres/src/: broker.rs  error.rs  lib.rs  worker.rs
ironworker-rabbitmq/: Cargo.toml
ironworker-redis/: Cargo.toml
ironworker-redis/src/: broker.rs  error.rs  lib.rs  message.rs  worker.rs
ironworker-redis/tests/: test_broker.rs
ironworker-rocket/: Cargo.toml
ironworker-rocket/src/: broker.rs  lib.rs
ironworker-rocket/templates/: base.html  index.html
ironworker-sqs/: Cargo.toml
ironworker-sqs/src/: broker.rs  errors.rs  lib.rs  queue.rs
ironworker-sqs/tests/: image.rs  test_broker.rs
ironworker-warp/: Cargo.toml
ironworker-warp/src/: lib.rs
ironworker/src/: enqueue.rs  extract.rs  lib.rs  process.rs
ironworker/src/application/: builder.rs  config.rs  mod.rs  shared.rs
ironworker/src/application/worker/: machine.rs  mod.rs  pool.rs
ironworker/src/extras/: actix_integration.rs  axum_integration.rs  mod.rs
ironworker/templates/: index.html
