[package]
name = "ironworker-actix"
version = "0.1.0"
edition = "2018"
description = "Actix integration for Ironworker"
repository = "https://github.com/ducharmemp/ironworker"
readme = "../README.md"
license = "MIT OR Apache-2.0"
keywords = ["jobs", "queues", "web"]
categories = ["web-programming:async-job", "web-programming:job-queue"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata]
msrv = "1.54.0"

[dependencies]
