[package]
name = "ironworker-axum"
version = "0.1.0"
edition = "2018"
description = "Axum integration for Ironworker"
repository = "https://github.com/ducharmemp/ironworker"
readme = "../README.md"
license = "MIT OR Apache-2.0"
keywords = ["jobs", "queues", "web"]
categories = ["web-programming:async-job", "web-programming:job-queue"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata]
msrv = "1.54.0"

[dependencies]
askama_axum = "0.1"
askama = "0.11"
axum = "0.4"
ironworker-core = { path = "../ironworker-core" }
serde = "1"
uuid = { version = "0.8", features = ["serde"] }