[package]
name = "ironworker-bench"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
criterion = { version = "0.3.5", features = ["async_tokio"] }
ironworker-redis = { path = "../ironworker-redis" }
ironworker-core = { path = "../ironworker-core" }
tokio = { version = "1", features = ["full"] }

[[bench]]
name = "process_redis"
harness = false