[package]
name = "ironworker-bench"
version = "0.1.0"
edition = "2018"
publish = false

[package.metadata]
msrv = "1.54.0"

[dependencies]
criterion = { version = "0.3.5", features = ["async_tokio"] }
deadpool-redis = "0.10"
ironworker-core = { path = "../ironworker-core" }
ironworker-redis = { path = "../ironworker-redis" }
redis = { version = "0.21", features = [ "tokio-comp", "aio" ] }
snafu = "0.7"
tokio = { version = "1", features = ["full"] }

[[bench]]
name = "process_redis"
harness = false
