[package]
name = "ironworker-core"
version = "0.1.0"
edition = "2021"
description = "An async job runner for horizontally scalable task sets"
repository = "https://github.com/ducharmemp/ironworker"
readme = "../README.md"
license = "MIT OR Apache-2.0"
keywords = ["jobs", "queues", "web"]
categories = ["web-programming:async-job", "web-programming:job-queue"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = [ "serde" ] }
uuid = { version = "0.8", features = ["v4"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
flume = { version = "0.10", features = ["async"] }
futures = "0.3"