[package]
name = "ironworker-core"
version = "0.1.0"
edition = "2018"
description = "An async job runner for horizontally scalable task sets"
repository = "https://github.com/ducharmemp/ironworker"
readme = "../README.md"
license = "MIT OR Apache-2.0"
keywords = ["jobs", "queues", "web"]
categories = ["web-programming:async-job", "web-programming:job-queue"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata]
msrv = "1.54.0"

[dependencies]
anymap = "1.0.0-beta.1"
async-trait = "0.1"
chrono = { version = "0.4", features = [ "serde" ] }
config = "0.11"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
snafu = { version = "0.7", features = ["futures"]}
tokio = { version = "1", features = ["full", "test-util"] }
tracing = "0.1"
uuid = { version = "0.8", features = ["v4", "serde"] }
derive_builder = "0.10"