[package]
name = "ironworker-postgres"
version = "0.1.0"
edition = "2021"
description = "A PostgreSQL broker for Ironworker applications"
repository = "https://github.com/ducharmemp/ironworker"
readme = "../README.md"
license = "MIT OR Apache-2.0"
keywords = ["jobs", "queues", "web"]
categories = ["web-programming:async-job", "web-programming:job-queue"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls", "postgres", "time", "chrono", "offline" ] }
tokio = { version = "1", features = ["full"] }
thiserror = "1"
ironworker-core = { path = "../ironworker-core" }
async-trait = "0.1"
serde = "1"
serde_json = "1"
uuid = { version = "0.8", features = ["v4"] }
chrono = { version = "0.4", features = [ "serde" ] }