[package]
name = "ironworker-redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
thiserror = "1"
ironworker-core = { path = "../ironworker-core" }
async-trait = "0.1"
serde = "1"
serde_json = "1"
redis = "0.21"
uuid = { version = "0.8", features = ["v4"] }