[package]
name = "ironworker-redis"
version = "0.1.0"
edition = "2021"
description = "A Redis broker for Ironworker applications"
repository = "https://github.com/ducharmemp/ironworker"
readme = "../README.md"
license = "MIT OR Apache-2.0"
keywords = ["jobs", "queues", "web"]
categories = ["web-programming:async-job", "web-programming:job-queue"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
thiserror = "1"
ironworker-core = { path = "../ironworker-core" }
async-trait = "0.1"
serde = "1"
serde_json = "1"
redis = { version = "0.21", features = [ "tokio-comp", "aio" ] }
uuid = { version = "0.8", features = ["v4"] }
chrono = { version = "0.4", features = [ "serde" ] }
futures = "0.3"
bb8-redis = "0.10.1"