[package]
name = "ironworker-redis"
version = "0.1.0"
edition = "2018"
description = "A Redis broker for Ironworker applications"
repository = "https://github.com/ducharmemp/ironworker"
readme = "../README.md"
license = "MIT OR Apache-2.0"
keywords = ["jobs", "queues", "web"]
categories = ["web-programming:async-job", "web-programming:job-queue"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata]
msrv = "1.54.0"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = [ "serde" ] }
futures = "0.3"
ironworker-core = { path = "../ironworker-core" }
redis = { version = "0.21", features = [ "tokio-comp", "aio", "connection-manager" ] }
serde = "1"
serde_json = "1"
uuid = { version = "0.8", features = ["v4"] }
tokio = { version = "1.17" }

[dev-dependencies]
testcontainers = "0.12.0"