[package]
name = "ironworker-rocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
askama = { git = "https://github.com/djc/askama", features = [ "with-rocket"] }
askama_rocket = { git = "https://github.com/djc/askama" }
ironworker-core = { path = "../ironworker-core" }
ironworker-redis = { path = "../ironworker-redis" }
async-trait = "0.1"