[package]
name = "ironworker-rocket"
version = "0.1.0"
edition = "2021"
description = "Rocket integration for Ironworker"
repository = "https://github.com/ducharmemp/ironworker"
readme = "../README.md"
license = "MIT OR Apache-2.0"
keywords = ["jobs", "queues", "web"]
categories = ["web-programming:async-job", "web-programming:job-queue"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
askama = { git = "https://github.com/djc/askama", features = [ "with-rocket"] }
askama_rocket = { git = "https://github.com/djc/askama" }
ironworker-core = { path = "../ironworker-core" }
ironworker-redis = { path = "../ironworker-redis" }
async-trait = "0.1"