[package]
name = "ironworker-sqs"
version = "0.1.0"
edition = "2021"
description = "An SQS broker for Ironworker applications"
repository = "https://github.com/ducharmemp/ironworker"
readme = "../README.md"
license = "MIT OR Apache-2.0"
keywords = ["jobs", "queues", "web"]
categories = ["web-programming:async-job", "web-programming:job-queue"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
snafu = "0.7"
ironworker-core = { path = "../ironworker-core" }
async-trait = "0.1"
serde = "1"
serde_json = "1"
uuid = { version = "0.8", features = ["v4"] }
chrono = { version = "0.4", features = [ "serde" ] }
futures = "0.3"
aws-config = "0.4"
aws-sdk-sqs = "0.4"