[package]
name = "ironworker"
version = "0.1.0"
edition = "2018"
description = "An async job runner for horizontally scalable task sets"
repository = "https://github.com/ducharmemp/ironworker"
readme = "../README.md"
license = "MIT OR Apache-2.0"
keywords = ["jobs", "queues", "web"]
categories = ["web-programming:async-job", "web-programming:job-queue"]

[package.metadata]
msrv = "1.54.0"

[dependencies]
