[package]
name = "ironworker"
version = "0.1.0"
edition = "2018"
description = "An async job runner for horizontally scalable task sets"
repository = "https://github.com/ducharmemp/ironworker"
readme = "../README.md"
license = "MIT OR Apache-2.0"
keywords = ["jobs", "queues", "web"]
categories = ["web-programming:async-job", "web-programming:job-queue"]

[package.metadata]
msrv = "1.54.0"

[package.metadata.docs.rs]
all-features = true

[features]
default = []
redis = ["ironworker-redis"]
sqs = ["ironworker-sqs"]
axum-integration = ["askama_axum", "askama", "axum"]

[dependencies]
askama_axum = { version = "0.1", optional = true }
askama = { version = "0.11", optional = true }
axum = { version = "0.4", optional = true }
async-trait = "0.1"
chrono = { version = "0.4", features = [ "serde" ] }
config = "0.11"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
snafu = { version = "0.7", features = ["futures"]}
tokio = { version = "1.17", features = ["test-util", "macros"] }
tracing = "0.1"
uuid = { version = "0.8", features = ["v4", "serde"] }
ironworker-core = { path = "../ironworker-core" }
ironworker-redis = { path = "../ironworker-redis", optional = true }
ironworker-sqs = { path = "../ironworker-sqs", optional = true }

[dev-dependencies]
mockall = "0.11.0"