[package]
name = "actix"
version = "0.0.0"
edition = "2018"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
actix-web = "4.0"
ironworker = { path = "../../ironworker", features = ["redis", "actix-integration"] }
serde = "1"
snafu = "0.7"
tokio = { version = "1.17", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = { version = "0.4", features = [ "serde" ] }
env_logger = "0.9"