[package]
name = "axum"
version = "0.0.0"
edition = "2018"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.4"
ironworker-core = { path = "../../ironworker-core" }
ironworker-redis = { path = "../../ironworker-redis" }
ironworker-axum = { path = "../../ironworker-axum" }
serde = "1"
snafu = "0.7"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.2.0", features = ["add-extension", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = { version = "0.4", features = [ "serde" ] }