[package]
name = "postgres"
version = "0.0.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls", "postgres" ] }
tokio = { version = "1", features = ["full"] }
ironworker-postgres = { path = "../../ironworker-postgres" }
ironworker-core = { path = "../../ironworker-core" }
anyhow = "1"