[package]
name = "redis"
version = "0.0.0"
edition = "2018"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
ironworker-core = { path = "../../ironworker-core" }
ironworker-redis = { path = "../../ironworker-redis" }
serde = "1"
snafu = "0.7"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
