[package]
name = "rocket"
version = "0.0.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
ironworker-core = { path = "../../ironworker-core" }
ironworker-redis = { path = "../../ironworker-redis"}
ironworker-rocket = { path = "../../ironworker-rocket" }
tokio = { version = "1", features = ["full"] }
futures = "0.3"