[package]
name = "rocket"
version = "0.0.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0-rc.1", features = ["diesel_sqlite_pool"] }
ironworker-core = { path = "../../ironworker-core" }
ironworker-redis = { path = "../../ironworker-redis"}
ironworker-rocket = { path = "../../ironworker-rocket" }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
diesel = { version = "1.3", features = ["sqlite", "r2d2"] }
diesel_migrations = "1.3"